XdgPopupWindow: Allow position to be set by Plasma

This lets Plasma itself control the position of popup windows such as
Plasma tooltips. transientPlacement() now returns the position set by Plasma
if available.

BUG: 463272


(cherry picked from commit 539b6bb6ac3a58049b96106de55004806c639821)